# PCV

./: APA.cpp  APA.h  CMakeLists.txt  TSP.cpp  TSP.h  instancia.cpp  instancia.h  instanciaTSP.cpp  instanciaTSP.h  leitor.cpp  leitor.h  leitorTSP.cpp  leitorTSP.h  solucao.cpp  solucao.h
